--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ chrono = { version = "0.4", features = ["serde"] }
 bitcoin-wallet = { git = "https://github.com/rust-bitcoin/rust-wallet" }
 thiserror = "1.0"
 sha2 = "0.9.2"
+mockito = "0.30.0"
 
 # Add openssl-sys as a direct dependency so it can be cross compiled to
 # x86_64-unknown-linux-musl using the "vendored" feature below
@@ -34,6 +35,7 @@ version = "0.26.0"
 features = ["base64", "use-serde"]
 
 [dev-dependencies]
+cool_asserts = "1.1.1"
 fantoccini = "0.17.4"
 futures = "0.3.15"
 tokio = "*"
